<resources>
    <string name="app_name">PROJECT</string>
    <string name="title_events">Мероприятия</string>
    <string name="title_courses">Мои курсы</string>
    <string name="title_profile">Профиль</string>
    <string name="title_edit_profile">Редактирование</string>

    <string name="events_text_actionbar">Мероприятия</string>
    <string name="courses_text_actionbar">Курсы</string>
    <string name="profile_text_actionbar">Профиль</string>

    <string name="student_name">Имя</string>
    <string name="student_surname">Фамилия</string>
    <string name="student_patronymic">Отчество</string>
    <string name="student_fullname_edit_button">Редактировать</string>
    <string name="student_fullname_save_button">Сохранить</string>
    <string name="student_fullname_cancel_button">Отмена</string>
    <string name="edit_profile_alert_text">Если уйти с экрана редактирования, изменения не сохраняться. Уйти?</string>
    <string name="edit_profile_alert_stay">Остаться</string>
    <string name="edit_profile_alert_leave">Уйти</string>
    <string name="edit_profile_alert_empty_text">Поля Имя, Фамилия, Отчество не должны быть пустыми</string>
    <string name="profile_not_autorized_text">"Вы не авторизованы.
Войдите, чтобы получить доступ."</string>
    <string name="profile_not_autorized_button">Войти</string>
    <string name="profile_logout_text">Вы действительно хотите выйти?</string>
    <string name="profile_logout_yes">Да</string>
    <string name="profile_logout_no">Нет</string>

    <string name="title_grades">Успеваемость</string>
    <string name="title_rating">Рейтинг</string>
    <string name="title_tasks">Задания</string>
    <string name="details_button">ДЕТАЛИ</string>

    <string name="title_activity_login">Авторизация</string>
    <string name="login_hint_activity_login">ЛОГИН</string>
    <string name="password_hint_activity_login">ПАРОЛЬ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile_contact_info_label">&#160;&#160;&#160;&#160;Контактная информация</string>
    <string name="profile_education_info_label">&#160;&#160;&#160;&#160;Образование</string>
    <string name="profile_work_info_label">&#160;&#160;&#160;&#160;Работа</string>
    <string name="events_active_label">Актуальное</string>
    <string name="events_archive_label">Прошедшие</string>
    <string name="no_data_error">Данные отсутствуют</string>
</resources>
