<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Profile.LoginActivity">


    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/profile_not_autorized_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:ems="10"
        android:padding="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="textEmailAddress"
        android:hint="@string/login_hint_activity_login"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:ems="10"
        android:padding="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/password_hint_activity_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_login"
        app:layout_constraintBottom_toTopOf="@id/btn_login"/>
</android.support.constraint.ConstraintLayout>