<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        tools:context=".Profile.ProfileFragment">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1">

            <ImageView
                android:id="@+id/ivAvatarTop"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/cvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="?android:dividerVertical"
                    android:dividerPadding="4dp"
                    android:gravity="center"
                    android:showDividers="middle">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/blockPoints"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="22dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/valuePoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="182"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toTopOf="@id/labelPoints"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/labelPoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Баллов"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/valuePoints" />
                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/blockTests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="22dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/valueTests"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="12"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toTopOf="@id/labelTests"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/labelTests"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Тестов"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/valueTests" />
                    </android.support.constraint.ConstraintLayout>

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/blockCourses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="22dp"
                        android:layout_marginBottom="8dp">

                        <TextView
                            android:id="@+id/valueCourses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toTopOf="@id/labelCourses"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/labelCourses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="Курсов"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/valueCourses" />
                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/clAvatar">

            <TextView
                android:id="@+id/labelPatronymic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:text="@string/student_patronymic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/bottom_guideline"
                app:layout_constraintTop_toBottomOf="@+id/labelSurname"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="170dp"
                android:text="@string/student_name"
                app:layout_constraintStart_toStartOf="@+id/bottom_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/student_surname"
                app:layout_constraintStart_toStartOf="@+id/bottom_guideline"
                app:layout_constraintTop_toBottomOf="@+id/labelName" />

            <android.support.constraint.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="40dp" />

            <EditText
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:hint=""
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/bottom_guideline"
                app:layout_constraintTop_toBottomOf="@+id/labelName" />

            <EditText
                android:id="@+id/textSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:hint=""
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/bottom_guideline"
                app:layout_constraintTop_toBottomOf="@+id/labelSurname" />

            <EditText
                android:id="@+id/textPatronymic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:enabled="false"
                android:focusable="false"
                android:hint=""
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/bottom_guideline"
                app:layout_constraintTop_toBottomOf="@+id/labelPatronymic" />

            <Button
                android:id="@+id/buttonEditFullname"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/student_fullname_edit_button"
                android:textSize="10sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_show_autorization"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/profile_not_autorized_button"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_profile_black_24dp"
                app:layout_constraintBottom_toTopOf="@+id/textName"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btnRefresh"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Обновить"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>